feat: use bytes instead of string as data
by doing that we can transfer any kind of file (not only strings)